--- a/template.html
+++ b/template.html
@@ -3,17 +3,33 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <title>Hello Rigo with Vanilla.js</title>
+        <title>Simple infinite counter</title>
        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     </head>
     <body>
-        <div id="app"></div>
+        <img src="" alt="Reloj">
+        <div id="app">
+
+            <div class="digit">
+                <div id="box1" class="digit-box">0</div>
+                <div id="box2" class="digit-box">0</div>
+                <div id="box3" class="digit-box">0</div>
+                <div id="box4" class="digit-box">0</div>
+                <div id="box5" class="digit-box">0</div>
+                <div id="box6" class="digit-box">0</div>
+            </div>
+
+
+        </div>
+
+        
 
         <!-- Many of bootstrap components require the use of JavaScript to function -->
         <!-- Popper and BootStrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+        <script src="index.js"></script>
     </body>
 </html>
